tests/negative/invalid_conversion.c
int main(void) { const int x = 1; int *p = &x; return *p; }
